# wordle-cli-cpp

./: CMakeLists.txt  README.md
data/txt/: words5.db  words5.txt
lib/: test.cpp
lib/drawguess/: drawguess.cpp
lib/drawguess/include/: drawguess.hpp
lib/random/: random.cpp
lib/random/include/: random.hpp
lib/words/: words.cpp
lib/words/include/: words.hpp
res/: words10.txt  words11.txt  words12.txt  words13.txt  words14.txt  words6.txt  words7.txt  words8.txt  words9.txt
res/db/: words10.db  words11.db  words12.db  words13.db  words14.db  words15.db  words16.db  words17.db  words18.db  words19.db  words20.db  words21.db  words22.db  words23.db  words24.db  words25.db  words27.db  words28.db  words29.db  words5.db  words6.db  words7.db  words8.db  words9.db
res/scripts/: remove_short_words.py  split.py
res/unformatted-words/: words-clean.txt
scripts/: addtodb.py  remove_names_from_words.py
src/: main  main.cpp
tests/: test.cpp
